--- a/hi.css
+++ b/hi.css
@@ -10,7 +10,7 @@
 hr {
     border: none;
     height: 20px;
-    background-color: #000000;
+    background-color: #00021f;
 }
 
 .hot_drink, .cold-drink {
