--- a/hi.css
+++ b/hi.css
@@ -1,6 +1,6 @@
 .brand img {
-    width: 50%;
-    height: auto;
+    width: 20%;
+    height: 20%;
     border: 1px solid;
     border-radius: 50px;
     display: block;
@@ -9,11 +9,12 @@
 
 hr {
     border: none;
-    height: 20px;
+    height: 10px;
     background-color: #00021f;
 }
 
-.hot_drink, .cold-drink {
+.hot_drink,
+.cold-drink {
     background: #424C4E;
     width: 80%;
     max-width: 500px;
@@ -23,13 +24,15 @@ hr {
     padding: 20px;
 }
 
-.hot_drink h1, .cold-drink h1 {
-    text-align: center;
+.hot_drink h1,
+.cold-drink h1 {
+    margin-top: 0;
     font-size: 2.5rem;
     margin-bottom: 0;
 }
 
-.hot_drink ul, .cold-drink ul {
+.hot_drink ul,
+.cold-drink ul {
     padding-left: 0;
     list-style: none;
 }
@@ -46,7 +49,8 @@ hr {
     border-bottom: none;
 }
 
-.english, .arabic {
+.english,
+.arabic {
     flex: 1;
     font-size: 1.2rem;
 }
@@ -57,21 +61,20 @@ hr {
 }
 
 
-
 /* Media queries */
+
 @media (max-width: 768px) {
     .brand img {
         width: 80%;
     }
-    
-    .hot_drink h1, .cold-drink h1 {
+    .hot_drink h1,
+    .cold-drink h1 {
         font-size: 2rem;
     }
-
-    .english, .arabic {
+    .english,
+    .arabic {
         font-size: 1rem;
     }
-
     .price {
         flex: 0 0 30%;
     }
@@ -81,15 +84,14 @@ hr {
     .brand img {
         width: 90%;
     }
-    
-    .hot_drink h1, .cold-drink h1 {
+    .hot_drink h1,
+    .cold-drink h1 {
         font-size: 1.5rem;
     }
-
-    .english, .arabic {
+    .english,
+    .arabic {
         font-size: 0.9rem;
     }
-
     .price {
         flex: 0 0 40%;
     }
